k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
     labels:
       app: client
    spec:
      containers:
        - image: client:latest
          imagePullPolicy: Never
          name: client
          ports:
            - containerPort: 3000
