k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: client
